@@ -1,3 +1,8 @@
+2020-09-25  Simon Marchi  <simon.marchi@efficios.com>
+
+	* infrun.h (infrun_debug_printf): Fix formatting.
+	* linux-nat.c (linux_nat_debug_printf): Fix formatting.
+
 2020-10-20  Simon Marchi  <simon.marchi@polymtl.ca>
 
 	* infrun.c (currently_stepping): Change int to bool
